2001-05-31  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	Merged MIME Parameter Value decoder.

	* mime-parse.el (mime-decode-parameters): Renamed from
	`mime-decode-parameter-plist'.
	(mime-decode-parameter-alist): Removed.
	(mime-decode-alist-to-plist): Ditto.

	* FLIM-API.en (mime-entity-encoding): Abolish optional argument
	`default-encoding'.
	(mime-parse-Content-Tranfer-Encoding): Ditto.

2001-05-02  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* eword-decode.el (eword-decode-encoded-word): Don't use `let'.

	* mime-parse.el (mime-decode-parameter-plist): Modified
	description of return value.
	(mime-parse-Content-Type): Ditto.
	(mime-read-Content-Type): Ditto.
	(mime-parse-Content-Disposition): Ditto.
	(mime-read-Content-Disposition): Ditto.
	(mime-parse-Content-Transfer-Encoding): Ditto.
	(mime-read-Content-Transfer-Encoding): Ditto.

2001-05-01  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* mime-parse.el (mime-parse-parameters): Don't use `equal' for
	strings.
	(mime-parse-Content-Type): Ditto.

2001-04-30  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* mime-parse.el (mime-decode-parameter-value): Use one temporary
	buffer.
	(mime-decode-parameter-plist): Changed internal data structure.

2001-04-28  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* eword-decode.el (eword-encoded-word-regexp): Match for language.
	(eword-decode-region): Refer the 7th parens, not 6th.
	(eword-decode-encoded-word): Extract language information.
	(eword-decode-encoded-text): New optional argument `language'.

	* mime-def.el (mime-charset-regexp): Updated for RFC2231.

	* mime-parse.el (mime-decode-parameter-plist): Fix regexp.
	Use symbol for language information.

	* tests/test-rfc2231.el: Renamed all testcases.

2001-04-27  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* mime-parse.el (mime-decode-parameter-value): Don't use
	`int-char'.

2001-04-27  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* mime.el (mime-entity-read-field): Would capitalize twice.
