@@ -29,7 +29,10 @@
 (require 'path-util)
 (eval-when-compile
   ;; XXX: should provide char-list instead of string-to-char-list.
+  ;; XXx: and also the macro `as-binary-process' should be provided
+  ;; XXx: by the module "pces" which will be loaded by way of "poem".
   (require 'poem))
+
 
 ;;; @ Quoted-Printable encoder
 ;;;
